--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <body>
     <h1><a href="index.html">SLP-artworks</a></h1>
-    <img src="Christmas.jpg" width="100%">
+    <img src="Christmas.jfif" width="100%">
     <h2>Merry Christmas H</h2>
     <h3><a href="1 menu.html" title="들어오세요">menu</a><h3>
   </body>
