--- a/2 introduction.html
+++ b/2 introduction.html
@@ -6,7 +6,7 @@
   <head>
     <body>
       <h1><a href="index.html">SLP-ARTWORKS</a></h1>
-      <img src="hello.jfif" width="100%">
+      <img src="startup slpartworks.jpg" width="100%">
       <h2>언어재활사</h2>
         <p style="margin-top:50;"><strong>언어치료사</strong>와 같은 직무용어이며, <a href="https://ko.wikipedia.org/wiki/%EC%96%B8%EC%96%B4" target="_blank" title="위키백과 ''언어''">언어</a> 및 <a href="https://ko.wikipedia.org/wiki/%EC%9D%98%EC%82%AC%EC%86%8C%ED%86%B5" target="_blank" title="위키백과 ''의사소통''">의사소통</a> 장애의 선별검사 또는 평가, 진단 및 중재(재활), 가정지도, 연구개발, 예방을 위한 공공서비스 제공 등이 주요 직무이다.</p>
         <p style="margin-top:50;"><strong>언어재활사</strong>가 다루는 언어 장애의 유형은 크게 <u>언어발달장애</u>, <u>조음음운장애</u>, <u>신경언어장애</u>, <u>음성장애</u>, <u>유창성장애</u>로 구분할 수 있으며, 청각장애인이나 삼킴장애, 언어와 관련된 학습장애(대표적으로 난독증), 다문화가정 아동의 언어발달 문제 등을 다루기도 한다.</p>
