--- a/1 menu.html
+++ b/1 menu.html
@@ -8,17 +8,17 @@
       <h1><a href="index.html">SLP-ARTWORKS</a></h1>
       <img src="hello.jfif" width="100%">
       <ul>
-        <li><a href="2 introduction.html">소개글(TEST)</a></li>
+        <li><a href="2 introduction.html">Introduction(test)</a></li>
       </ul>
       <ul>
-        <li><a href="language development disorder.html">언어발달장애(공사중)</a></li>
-        <li><a href="speech sound disorder.html">말소리장애(공사중)</a></li>
-        <li><a href="fluency disorder.html">유창성장애(공사중)</a></li>
-        <li><a href="neurologic communication disorder.html">신경언어장애(공사중)</a></li>
-        <li><a href="voice disorder.html">음성장애(공사중)</a></li>
+        <li><a href="language development disorder.html">Language development disorder(under construction)</a></li>
+        <li><a href="speech sound disorder.html">Speech sound disorder(under construction)</a></li>
+        <li><a href="fluency disorder.html">fluency disorder(Under construction)</a></li>
+        <li><a href="neurologic communication disorder.html">Neurologic communication disorder(under construction)</a></li>
+        <li><a href="voice disorder.html">Voice disorder(under construction)</a></li>
       </ul>
       <ul>
-        <li><a href="voice disorder.html">이야기(공사중)</a></li>
+        <li><a href="voice disorder.html">Communication(under construction)</a></li>
       </ul>
     </body>
 </html>
