--- a/1 menu.html
+++ b/1 menu.html
@@ -6,7 +6,7 @@
   <head>
     <body>
       <h1><a href="index.html">SLP-ARTWORKS</a></h1>
-      <img src="startup slpartworks" width="100%">
+      <img src="startup slpartworks.jpg" width="100%">
       <ul>
         <li><a href="2 introduction.html">Introduction(test)</a></li>
       </ul>
