--- a/1 menu.html
+++ b/1 menu.html
@@ -5,7 +5,7 @@
     <title>용범</title>
   <head>
     <body>
-      <h1><a href="index.html">SLP-ARTWORKS</a></h1>
+      <h1><a href="index.html">SLP-artworks</a></h1>
       <img src="startup slpartworks.jpg" width="100%">
       <ul>
         <li><a href="2 introduction.html">Introduction(test)</a></li>
