--- a/1 menu.html
+++ b/1 menu.html
@@ -8,17 +8,17 @@
       <h1><a href="index.html">SLP-artworks</a></h1>
       <img src="startup slpartworks.jpg" width="100%">
       <ul>
-        <li><a href="2 introduction.html">Introduction(test)</a></li>
+        <li><a href="1-1 introduction.html">Introduction(test)</a></li>
       </ul>
       <ul>
-        <li><a href="language development disorder.html">Language development disorder(under construction)</a></li>
-        <li><a href="speech sound disorder.html">Speech sound disorder(under construction)</a></li>
-        <li><a href="fluency disorder.html">fluency disorder(Under construction)</a></li>
-        <li><a href="neurologic communication disorder.html">Neurologic communication disorder(under construction)</a></li>
-        <li><a href="voice disorder.html">Voice disorder(under construction)</a></li>
+        <li><a href="1-2 language development disorder.html">Language development disorder(under construction)</a></li>
+        <li><a href="1-3 speech sound disorder.html">Speech sound disorder(under construction)</a></li>
+        <li><a href="1-4 fluency disorder.html">fluency disorder(Under construction)</a></li>
+        <li><a href="1-5 neurologic communication disorder.html">Neurologic communication disorder(under construction)</a></li>
+        <li><a href="1-6 voice disorder.html">Voice disorder(under construction)</a></li>
       </ul>
       <ul>
-        <li><a href="voice disorder.html">Communication(under construction)</a></li>
+        <li><a href="1-7 communication.html">Communication(under construction)</a></li>
       </ul>
     </body>
 </html>
