--- a/1-1 introduction.html
+++ b/1-1 introduction.html
@@ -5,7 +5,7 @@
     <title>용범</title>
   <head>
     <body>
-      <h1><a href="index.html">SLP-artwork</a></h1>
+      <h1><a href="index.html">SLP-artworks</a></h1>
       <img src="startup slpartworks.jpg" width="100%">
       <h2>언어재활사(test)</h2>
         <p style="margin-top:50;"><strong>언어치료사</strong>와 같은 직무용어이며, <a href="https://ko.wikipedia.org/wiki/%EC%96%B8%EC%96%B4" target="_blank" title="위키백과 ''언어''">언어</a> 및 <a href="https://ko.wikipedia.org/wiki/%EC%9D%98%EC%82%AC%EC%86%8C%ED%86%B5" target="_blank" title="위키백과 ''의사소통''">의사소통</a> 장애의 선별검사 또는 평가, 진단 및 중재(재활), 가정지도, 연구개발, 예방을 위한 공공서비스 제공 등이 주요 직무이다.</p>
