--- a/1 menu.html
+++ b/1 menu.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>용범</title>
-  <head>
+  </head>
     <body>
       <h1><a href="index.html">SLP-artworks</a></h1>
       <img src="startup slpartworks.jpg" width="100%">
@@ -17,8 +17,27 @@
         <li><a href="1-5 neurologic communication disorder.html">Neurologic communication disorder(under construction)</a></li>
         <li><a href="1-6 voice disorder.html">Voice disorder(under construction)</a></li>
       </ul>
-      <ul>
-        <li><a href="1-7 communication.html">Communication(under construction)</a></li>
-      </ul>
+      <P>
+        <div id="disqus_thread"></div>
+        <script>
+
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://slpartworks.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      </P>
     </body>
 </html>
