--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>용범</title>
-<head>
-  <body>
-    <h1><a href="index.html">SLP-artworks</a></h1>
-    <img src="startup slpartworks.jpg" width="100%">
-    <p>
+  <head>
+    <meta charset="utf-8">
+    <title>용범</title>
+  </head>
+    <body>
+      <h1><a href="index.html">SLP-artworks</a></h1>
+      <img src="startup slpartworks.jpg" width="100%">
+      <p>
       <iframe width="300" height="200" src="https://www.youtube.com/embed/g9hwjQBQFIo?autoplay=1&amp;loop=1;playlist=fn5OBAfHLKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </p>
-    <h2>Hello</h2>
-    <h3><a href="1 menu.html" title="come on in">MENU</a><h3>
-  </body>
+      </p>
+      <h2>Hello</h2>
+      <h3><a href="1 menu.html" title="come on in">MENU</a><h3>
+    </body>
+</html>
